sync AttachmentController, add collabora configuration