@@ -1,15 +1,8 @@
 dependencies {
-//    implementation 'commons-io:commons-io:2.16.1'
-//    implementation 'org.jruby:jruby-complete:9.4.5.0'
-    implementation('org.asciidoctor:asciidoctorj:2.5.13') {
-//        exclude group: 'org.jruby', module: 'jruby'
-    }
-
-    implementation 'org.asciidoctor:asciidoctorj-api:2.5.13'
-    implementation 'org.asciidoctor:asciidoctorj-pdf:2.3.17'
+    implementation 'org.asciidoctor:asciidoctorj-api:3.0.0'
+    implementation 'org.asciidoctor:asciidoctorj:3.0.0'
+    implementation 'org.asciidoctor:asciidoctorj-pdf:2.3.19'
     implementation 'org.asciidoctor:asciidoctorj-diagram:2.3.1'
-    implementation 'org.asciidoctor:asciidoctorj-diagram-plantuml:1.2024.3'
+    implementation 'org.asciidoctor:asciidoctorj-diagram-plantuml:1.2024.5'
     implementation 'org.asciidoctor:asciidoctorj-revealjs:5.1.0'
 }
-
-// $ java --add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED -jar server-0.5.jar
